--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -101,9 +101,10 @@
                 android:id="@+id/summaryPaymentSubtotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin10"
                 android:text="@string/default_payment_subtotal"
-                app:layout_constraintStart_toEndOf="@id/summaryTotalGuideline"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/summaryPaymentTotal"
