--- a/app/src/main/res/layout/order_row_item.xml
+++ b/app/src/main/res/layout/order_row_item.xml
@@ -58,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
+                android:visibility="invisible"
                 android:text="@string/label_row_toppings"
                 android:textSize="@dimen/rowFontSize"
                 app:layout_constraintRight_toLeftOf="@id/rowLeftGuideline"
@@ -101,6 +102,7 @@
                 android:layout_marginStart="@dimen/margin20"
                 android:text="@string/default_row_toppings"
                 android:textSize="@dimen/rowFontSize"
+                android:visibility="gone"
                 app:layout_constraintLeft_toRightOf="@id/rowLeftGuideline"
                 app:layout_constraintTop_toBottomOf="@id/rowItemSize" />
 
